# chipeyte

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
chipeyte_interpreter/: Cargo.toml  errors.rs  memory.rs  operations.rs  types.rs
chipeyte_interpreter/cpu/: registers.rs
chipeyte_interpreter/interface/: sdl2.rs
chipeyte_interpreter/src/: cpu.rs  errors.rs  interface.rs  lib.rs  memory.rs  operations.rs
chipeyte_interpreter/src/cpu/: instruction_decoder.rs  registers.rs
chipeyte_sdl2/: Cargo.toml
chipeyte_sdl2/src/: lib.rs
chipeyte_ui/: Cargo.toml
chipeyte_ui/src/: lib.rs  mock.rs  sdl2.rs
programs/: controller.c8  controller01.c8  drawing.c8  drawing01.c8  drawing02.c8  drawing03.c8  sound.c8  test.c8  test_registers.c8
src/: controller.rs  cpu.rs  errors.rs  graphics.rs  interface.rs  main.rs  memory.rs  operations.rs  program_reader.rs
src/cpu/: error.rs  instruction_decoder.rs  registers.rs
src/graphics/: lumi.rs  sdl2.rs
