[package]
name = "chipeyte"
version = "0.1.0"
authors = ["Jens Östlund <jostlund@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
chipeyte_interpreter = { path = "./chipeyte_interpreter" }
chipeyte_sdl2 = { path = "./chipeyte_sdl2" }

[workspace]
members = ["chipeyte_interpreter", "chipeyte_sdl2"]
