[package]
name = "chipeyte_ui"
version = "0.1.0"
authors = ["Jens Östlund <jostlund@gmail.com>"]
edition = "2018"

[features]

default = []

sdl2-ui = ["sdl2"]

[dependencies]
chipeyte_interpreter = { path = "../chipeyte_interpreter" }

[dependencies.sdl2]
version = "0.34.2"
features = ["gfx"]
optional = true
